--- a/css/main.css
+++ b/css/main.css
@@ -39,10 +39,17 @@
   }
   
   #text {
-    font-size: 4em;
+    font-size: 2.5em;
     font-weight: bold;
     margin-top: 0.2em;
     text-transform: uppercase;
+  }
+
+
+  .subtitle a {
+    color: white;
+    font-size: 1em;
+    /* font-weight: 100; */
   }
   
   .col-centered{
