--- a/css/main.css
+++ b/css/main.css
@@ -1,26 +1,26 @@
   /* Title 3D */
 
-  .char18, .char25 {
+  .char18, .char25, .char32 {
     color: #c44032;
     text-shadow: 0px 0px 0 #8b2d23, 1px -1px 0 #872c22, 2px -2px 0 #832b21, 3px -3px 0 #7f2920, 4px -4px 0 #7b281f, 5px -5px 0 #77271e, 6px -6px 0 #73251d, 7px -7px 0 #6f241c, 8px -8px 0 #6b231b, 9px -9px 0 #67211a, 10px -10px 0 #622019, 11px -11px 0 #5e1f18, 12px -12px 0 #5a1e17, 13px -13px 12px rgba(0, 0, 0, 0.55), 13px -13px 1px rgba(0, 0, 0, 0.5);
   }
   
-  .char19, .char26 {
+  .char19, .char26, .char33 {
     color: #e36b23;
     text-shadow: 0px 0px 0 #a94d16, 1px -1px 0 #a54b15, 2px -2px 0 #a04914, 3px -3px 0 #9c4714, 4px -4px 0 #974513, 5px -5px 0 #924313, 6px -6px 0 #8e4112, 7px -7px 0 #893e11, 8px -8px 0 #853c11, 9px -9px 0 #803a10, 10px -10px 0 #7c3810, 11px -11px 0 #77360f, 12px -12px 0 #73340f, 13px -13px 12px rgba(0, 0, 0, 0.55), 13px -13px 1px rgba(0, 0, 0, 0.5);
   }
   
-  .char21, .char28 {
+  .char21, .char28, .char34 {
     color: #ffd300;
     text-shadow: 0px 0px 0 #b89800, 1px -1px 0 #b39400, 2px -2px 0 #ad8f00, 3px -3px 0 #a88b00, 4px -4px 0 #a38700, 5px -5px 0 #9e8300, 6px -6px 0 #997f00, 7px -7px 0 #947a00, 8px -8px 0 #8f7600, 9px -9px 0 #8a7200, 10px -10px 0 #856e00, 11px -11px 0 #806a00, 12px -12px 0 #7a6500, 13px -13px 12px rgba(0, 0, 0, 0.55), 13px -13px 1px rgba(0, 0, 0, 0.5);
   }
   
-  .char22, .char29 {
+  .char22, .char29, .char35 {
     color: #5da028;
     text-shadow: 0px 0px 0 #3c671a, 1px -1px 0 #396319, 2px -2px 0 #375f18, 3px -3px 0 #355b17, 4px -4px 0 #325716, 5px -5px 0 #305215, 6px -6px 0 #2e4e14, 7px -7px 0 #2b4a13, 8px -8px 0 #294612, 9px -9px 0 #264211, 10px -10px 0 #243e10, 11px -11px 0 #223a0f, 12px -12px 0 #1f360d, 13px -13px 12px rgba(0, 0, 0, 0.55), 13px -13px 1px rgba(0, 0, 0, 0.5);
   }
   
-  .char23, .char30 {
+  .char23, .char30, .char27 {
     color: #4584be;
     text-shadow: 0px 0px 0 #31608b, 1px -1px 0 #2f5d87, 2px -2px 0 #2e5a83, 3px -3px 0 #2d5880, 4px -4px 0 #2b557c, 5px -5px 0 #2a5378, 6px -6px 0 #295074, 7px -7px 0 #274d71, 8px -8px 0 #264b6d, 9px -9px 0 #254869, 10px -10px 0 #234665, 11px -11px 0 #224361, 12px -12px 0 #21405e, 13px -13px 12px rgba(0, 0, 0, 0.55), 13px -13px 1px rgba(0, 0, 0, 0.5);
   }
@@ -39,20 +39,49 @@
   }
   
   #text {
-    font-size: 2.5em;
+    font-size: 5em;
     font-weight: bold;
     margin-top: 0.2em;
     text-transform: uppercase;
   }
 
+  h2 a{
+    font-size: 0.6em;
+     color: black;
+     text-decoration: none !important;
+     text-decoration-color: black;
+     font-family: 'Fredoka One', cursive;
+     outline: 0;
+
+  }
+  a:visited {
+    color: black;
+  }
+  a.underlined
+{
+   text-decoration:underline;
+}
+
+  @media only screen and (max-width: 600px) {
+    #text {
+      font-size: 2.5em;
+    }
+    h2 {
+      font-size: 1.5em;
+    }
+    #hint {
+      font-size: 3em;
+    }
+  }
+  
   #hint {
-    font-size: 5vh;
-    color: white;
+    font-size: 1.5em;
+    color: black;
     font-weight: bold;
-    text-shadow: -1px 0 black, 0 1px black, 1px 0 black, 0 -1px black;
+    font-family: 'Fredoka One', cursive;
   }
 
-  .subtitle a {
+  .subtitle {
     color: white;
     font-size: 1em;
     /* font-weight: 100; */
@@ -64,8 +93,8 @@
   }
   
   #scene-container {
-    width: 60vw;
-    height: 60vw;
+    width: 20em;
+    height: 20em;
     /* border-style: dashed;
     border-color: black;
     border-width: 2px;
@@ -89,4 +118,5 @@
     color: white;
     width: 50%;
     border-color: black;
+    border-width: 0.01em;
   }
