--- a/css/main.css
+++ b/css/main.css
@@ -245,7 +245,7 @@ button {
   left: 0;
   z-index: -1;
   border-radius: 5px;
-  background-color: #06D6A0;
+  background-color: #323238;
   background-image: linear-gradient(315deg, #FFC43D 0%, #EF476F 74%);
   transition: all 2s ease;
 }
