Fix iPhone input

--- a/css/main.css
+++ b/css/main.css
@@ -418,3 +418,12 @@ h3 {
     width: 10em;
     height: 1em;
 }
+
+/* Fix iPhone input */
+input, input:before, input:after {
+  -webkit-user-select: initial;
+  -khtml-user-select: initial;
+  -moz-user-select: initial;
+  -ms-user-select: initial;
+  user-select: initial;
+ } 
