--- a/css/main.css
+++ b/css/main.css
@@ -176,7 +176,7 @@ h1 {
   text-align: center;
 }
 button {
-  margin: 20px;
+  margin-left: 0px;
 }
 .custom-btn {
   width: 7em;
@@ -427,4 +427,17 @@ input {
   -ms-user-select: auto !important;
   -o-user-select: auto !important;
   user-select: auto !important;  
+}
+
+.input-group .form-control {
+  width: 100%;
+}
+
+.btn-secondary {
+  height: 3em;
+    border-radius: 5px;
+    background-color: #1B9AAA;
+    border-color: transparent;
+    width: 50%;
+    font-family: 'Exo';
 }
