--- a/css/main.css
+++ b/css/main.css
@@ -415,6 +415,48 @@ h3 {
   }
   }
 
+  /* On screens that are 400px or less: */
+@media screen and (max-height: 520px) {
+  h1{
+    font-size: 2.5em;
+  }
+  h2 {
+    font-size: 1.2em;
+  }
+  h3 {
+    font-size: 1.6em;
+  }
+  #hint {
+    margin-top: 0.2em;
+    font-size: 1.25em;
+    color: #F8FFE5;
+  }
+  #tip {
+    text-align: left;
+    display: none;
+    padding-right: 1em;
+  }
+  #scene-container {
+    width: 10em;
+    height: 10em;
+  }
+  #submit-text {
+    height: 2em;
+  }
+  .btn-secondary {
+    height: 2em !important;
+  }
+  #submit-button {
+      height: 2em;
+  }
+  .animated-box {
+    /* color: #ffffff;
+    padding: 15px;
+    text-align: center;
+    border-radius: 4px; */
+    margin-top: 0em;
+}
+}
 
 /* Spinner */
 .loader {
@@ -503,4 +545,11 @@ input {
     color: #1B9AAA;
     background-color: #1B9AAA;
     border-color: #1B9AAA;
+}
+
+#nextquestion {
+  font-size: 0.8em;
+  font-weight: normal;
+  text-decoration: underline;
+  font-family: 'Exo';
 }
